--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <script src="/socket.io/socket.io.js"></script>
 <script>
-  var socket = io.connect('http://localhost:8082', {
+  var socket = io.connect(window.location.hostname + ':8082', {
     query: window.location.search.substr(1)
   });
 
